// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculates the offsets base on icon size 1`] = `
<Icon
  allowFontScaling={false}
  color="#0097a9"
  name="map-marker"
  size={50}
  style={
    Object {
      "left": -25,
      "position": "absolute",
      "top": -50,
    }
  }
/>
`;

exports[`calculates the offsets base on icon size 2`] = `
<Icon
  allowFontScaling={false}
  color="#0097a9"
  name="map-marker"
  size={100}
  style={
    Object {
      "left": -50,
      "position": "absolute",
      "top": -100,
    }
  }
/>
`;
